--- a/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
+++ b/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
@@ -12,6 +12,60 @@
             </objects>
             <point key="canvasLocation" x="219" y="376"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Qx8-1w-FqD">
+            <objects>
+                <viewController id="0a8-Ab-X0L" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qum-Vp-zlD"/>
+                        <viewControllerLayoutGuide type="bottom" id="5CT-eP-2RM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jOz-j2-WwM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.50196081399917603" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="peR-D0-aXl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="611" y="376"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6zT-A6-nt5">
+            <objects>
+                <viewController id="FCB-zw-2oO" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DYi-s9-LiH"/>
+                        <viewControllerLayoutGuide type="bottom" id="CED-Fa-7xy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bLP-wc-yu0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Oz-en-dvV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="949" y="376"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dML-vQ-285">
+            <objects>
+                <viewController id="NbC-VN-gOs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="r07-w0-kKx"/>
+                        <viewControllerLayoutGuide type="bottom" id="pLH-bF-Ylz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eEE-gJ-AwR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OkO-oe-oOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1283" y="376"/>
+        </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
