--- a/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
+++ b/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
@@ -58,13 +58,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 1:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nb-fd-UQ3">
-                                <rect key="frame" x="104" y="20" width="112.5" height="43"/>
+                                <rect key="frame" x="104" y="60" width="112.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Throw it in the trash" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="w5v-AT-lTZ">
-                                <rect key="frame" x="16" y="83" width="288" height="36"/>
+                                <rect key="frame" x="16" y="123" width="288" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -76,7 +76,7 @@
                             <constraint firstItem="w5v-AT-lTZ" firstAttribute="top" secondItem="4nb-fd-UQ3" secondAttribute="bottom" constant="20" id="ehB-Cd-Njl"/>
                             <constraint firstAttribute="trailingMargin" secondItem="w5v-AT-lTZ" secondAttribute="trailing" id="svy-sM-KuK"/>
                             <constraint firstItem="w5v-AT-lTZ" firstAttribute="leading" secondItem="bLP-wc-yu0" secondAttribute="leadingMargin" id="vc5-dj-Ac4"/>
-                            <constraint firstItem="4nb-fd-UQ3" firstAttribute="top" secondItem="DYi-s9-LiH" secondAttribute="bottom" id="z8e-aE-WBD"/>
+                            <constraint firstItem="4nb-fd-UQ3" firstAttribute="top" secondItem="DYi-s9-LiH" secondAttribute="top" constant="40" id="z8e-aE-WBD"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -97,13 +97,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 2:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnY-Ti-y1a">
-                                <rect key="frame" x="104" y="20" width="112.5" height="43"/>
+                                <rect key="frame" x="104" y="60" width="112.5" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grill some meat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rhx-l1-KeK">
-                                <rect key="frame" x="16" y="83" width="288" height="36"/>
+                                <rect key="frame" x="16" y="123" width="288" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -114,7 +114,7 @@
                             <constraint firstAttribute="centerX" secondItem="hnY-Ti-y1a" secondAttribute="centerX" id="0Ov-hJ-A0h"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rhx-l1-KeK" secondAttribute="trailing" id="6Pm-CI-ElW"/>
                             <constraint firstItem="rhx-l1-KeK" firstAttribute="top" secondItem="hnY-Ti-y1a" secondAttribute="bottom" constant="20" id="PNC-gq-VDd"/>
-                            <constraint firstItem="hnY-Ti-y1a" firstAttribute="top" secondItem="r07-w0-kKx" secondAttribute="bottom" id="lnZ-J6-Vaq"/>
+                            <constraint firstItem="hnY-Ti-y1a" firstAttribute="top" secondItem="r07-w0-kKx" secondAttribute="top" constant="40" id="lnZ-J6-Vaq"/>
                             <constraint firstItem="rhx-l1-KeK" firstAttribute="leading" secondItem="eEE-gJ-AwR" secondAttribute="leadingMargin" id="x9a-cF-a0n"/>
                         </constraints>
                     </view>
