--- a/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
+++ b/onboardingWithUIPageViewController/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="bmV-yP-FOL">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -162,7 +163,7 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="burger" translatesAutoresizingMaskIntoConstraints="NO" id="6zl-iH-8Js">
-                                <rect key="frame" x="183.5" y="441" width="50" height="27"/>
+                                <rect key="frame" x="183.5" y="439" width="50" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="1Gu-Dr-jjG"/>
                                     <constraint firstAttribute="width" constant="50" id="kPy-1V-U7w"/>
@@ -178,7 +179,7 @@
                             <constraint firstItem="fDB-Oz-7c7" firstAttribute="leading" secondItem="eEE-gJ-AwR" secondAttribute="leading" id="N4o-OQ-fOq"/>
                             <constraint firstItem="rhx-l1-KeK" firstAttribute="top" secondItem="hnY-Ti-y1a" secondAttribute="bottom" constant="20" id="PNC-gq-VDd"/>
                             <constraint firstItem="fDB-Oz-7c7" firstAttribute="bottom" secondItem="9Mh-Ll-Ott" secondAttribute="bottom" constant="-5" id="bU7-Ae-3CM"/>
-                            <constraint firstItem="TJY-5B-upE" firstAttribute="top" secondItem="6zl-iH-8Js" secondAttribute="bottom" constant="-35" id="bVa-sp-E8O"/>
+                            <constraint firstItem="TJY-5B-upE" firstAttribute="centerY" secondItem="6zl-iH-8Js" secondAttribute="bottom" constant="-10" id="bVa-sp-E8O" userLabel="burger height"/>
                             <constraint firstItem="6zl-iH-8Js" firstAttribute="leading" secondItem="TJY-5B-upE" secondAttribute="trailing" constant="-40" id="bzQ-3l-bE7"/>
                             <constraint firstItem="TJY-5B-upE" firstAttribute="centerY" secondItem="fDB-Oz-7c7" secondAttribute="centerY" constant="30" id="jBb-CS-AHz"/>
                             <constraint firstItem="hnY-Ti-y1a" firstAttribute="top" secondItem="r07-w0-kKx" secondAttribute="top" constant="40" id="lnZ-J6-Vaq"/>
@@ -186,6 +187,10 @@
                             <constraint firstItem="pLH-bF-Ylz" firstAttribute="bottom" secondItem="fDB-Oz-7c7" secondAttribute="bottom" constant="10" id="yz6-DB-i6q"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="burger" destination="6zl-iH-8Js" id="5od-2U-Q2W"/>
+                        <outlet property="burgerAirHeight" destination="bVa-sp-E8O" id="0iE-lp-lY9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OkO-oe-oOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
